cargo-features = ["edition2021"]

[package]
name = "luwu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
derive_more = { version = "0.99", default-features = false, features = [ "from", "into", "as_ref", "as_mut", "deref", "deref_mut" ] }
figment = "0.10.6"
log = "0.4"
once_cell = "1.8.0"
opentelemetry = { version = "0.15", optional = true }
quaint = { git = "https://github.com/prisma/quaint/", features = [ "postgresql", "pooled", "serde-support", "chrono", "json", "uuid" ] }
rand = "0.8"
refinery = "0.6"
reqwest = { version = "0.11", features = [ "json" ] }
rmps = { version = "0.15", optional = true, package = "rmp-serde" }
rocket = { version = "0.5.0-rc.1", features = [ "uuid" ] }
rocket-versioning = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.9.0"
# sqlx = { version = "^0.5", features = [ "uuid, runtime-tokio, postgres, json, chrono" ] }
tracing = "0.1"
tracing-appender = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = { version = "0.14", optional = true }
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = [ "serde", "v4" ] }

[features]
json = [ "rocket/json" ]
msgpack = [ "rocket/msgpack", "rmps" ]
telemetry = [ "opentelemetry", "tracing-opentelemetry" ]
env-filter = []

default = [ "json", "msgpack", "telemetry", "env-filter" ]
